# ur

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.old  Makefile.win  README.md  TODO.txt  agm.pb.cc  agm.pb.h  build-protos.sh  build_gnu.sh  configure.ac  original-timestamps.md  stdout.txt  ur.cpp  ur.dev  ur.h  ur_audio.cpp  ur_audio.h  ur_font.cpp  ur_font.h  ur_layer.cpp  ur_layer.h  ur_map.cpp  ur_map.h  ur_menu.h  ur_object.cpp  ur_object.h  ur_private.rc  ur_sprite.cpp  ur_sprite.h  ur_titlescreen.cpp  ur_titlescreen.h  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  codeql-analysis.yml
builder/UR Builder/: CanvasView.swift  ContentView.swift  EditorState.swift  ExplorerView.swift  Info.plist  Tileset.swift  URMapDocument.swift  UR_BuilderApp.swift
builder/UR Builder.xcodeproj/: project.pbxproj
builder/UR Builder.xcodeproj/project.xcworkspace/xcuserdata/andrew.xcuserdatad/: UserInterfaceState.xcuserstate
builder/UR Builder.xcodeproj/xcuserdata/andrew.xcuserdatad/xcschemes/: xcschememanagement.plist
builder/UR Builder/Assets.xcassets/AppIcon.appiconset/: Contents.json
builder/UR Builder/Map/: AGM+blank.swift  AGM+legacyImport.swift  AGM+mapSize.swift  MapLayer+matrix.swift
builder/UR Builder/proto/: agm.pb.swift
data/: INFO.ur  Shortcut to ur.lnk  textfont.rar
data/maps/kv/: layerA.agm  layerA.apm  layerB.agm  layerC.agm  layerC.apm  newformat.agm
data/objs/: objs.txt
data/objs/al/: def.txt
data/objs/mickey/: def.txt
docs/: agm.txt  formats.txt  levelguide.txt  sprite.txt
libmodplug/: Makefile  README  sndfile.cpp
proto/: agm.proto
src/: CMakeLists.txt  Makefile.am  ur.cpp  ur.h
src/audio/: audio.cpp  audio.h  ur_audio.cpp  ur_audio.h
src/game/: map.cpp  map.h  object.cpp  object.h  object_owner.h  ur_map.cpp  ur_map.h  ur_object.cpp  ur_object.h
src/graphics/: Point2D.cpp  Point2D.h  Vector2D.cpp  Vector2D.h  font.cpp  font.h  layer.cpp  layer.h  sprite.cpp  sprite.h  ur_font.cpp  ur_layer.cpp  ur_sprite.cpp  ur_sprite.h
src/input/: ur_direction.cpp  ur_direction.h
src/proto/: agm.pb.cc  agm.pb.h
src/ui/: menu.cpp  menu.h  titlescreen.cpp  titlescreen.h  ur_menu.cpp  ur_menu.h  ur_titlescreen.cpp  ur_titlescreen.h
