bin_PROGRAMS = ur

ur_SOURCES = ur.cpp ur_audio.cpp ur_font.cpp ur_layer.cpp ur_map.cpp ur_menu.cpp ur_object.cpp ur_sprite.cpp ur_titlescreen.cpp fastmix.cpp  load_amf.cpp load_dbm.cpp load_dsm.cpp load_it.cpp  load_mdl.cpp load_mod.cpp load_mtm.cpp load_psm.cpp load_s3m.cpp load_ult.cpp load_wav.cpp mmcmp.cpp    snd_dsp.cpp  snd_fx.cpp   sndmix.cpp load_669.cpp load_ams.cpp load_dmf.cpp load_far.cpp load_j2b.cpp load_med.cpp load_mt2.cpp load_okt.cpp load_ptm.cpp load_stm.cpp load_umx.cpp load_xm.cpp  modplug.cpp  snd_flt.cpp  sndfile.cpp  tables.cpp

ur_LDADD = $(AM_LDFLAGS)

ur_CPPFLAGS = $(AM_CXXFLAGS)

SUBDIRS = libmodplug